@@ -61,16 +61,17 @@ dnl checks the results of libmikmod-config to some extent
 dnl
       rm -f conf.mikmodtest
       AC_TRY_RUN([
-#include <mikmod.h>
 #include <stdio.h>
 #include <stdlib.h>
+#include <string.h>
+#include <mikmod.h>
 
 char* my_strdup (char *str)
 {
   char *new_str;
 
   if (str) {
-    new_str = malloc ((strlen (str) + 1) * sizeof(char));
+    new_str = (char *) malloc ((strlen (str) + 1) * sizeof(char));
     strcpy (new_str, str);
   } else
     new_str = NULL;
