@@ -16,6 +16,7 @@ libmikmod 3.3.4 was released on XX-XXX-XXX.
 - ESD driver: Fix signature for esd_playstream function pointer (const)
 - ALSA driver: Remove unused function pointers.
 - The library is compilable using C++ compilers.
+- libmikmod.m4: fixed so that it works with C++ compilers.
 
 Summary of changes between libmikmod 3.3.2 and libmikmod 3.3.3 ():
 ==========================================================================
